--- a/02_CEA_1yr_War.Rmd
+++ b/02_CEA_1yr_War.Rmd
@@ -14,6 +14,7 @@ rm(list = ls())
 ##Install packages for Markov Model
 library(here)
 library(ggplot2)
+library(gridExtra)
 
 # Load Markov model function for both rivaroxaban and warfarin
 source(here::here("functions", "function_markov.R"))
