--- a/02_CEA_1yr_War.Rmd
+++ b/02_CEA_1yr_War.Rmd
@@ -40,7 +40,7 @@ d.c   <- d.e <- 0.05 / (1/cycle_length)           # discounting of costs and QAL
 #(5) Off Treatment = OT 
 
 v.n   <- c("NE", "VR", "MB", "NMB", "OT")         # Model states  
-v.M_1 <- c(1, 0, 0, 0, 0)                         # Everyone begins in index event
+v.M_1 <- c(1, 0, 0, 0, 0)                         # Everyone begins in no event state
 
 ``` 
 
@@ -66,11 +66,11 @@ pr.nmb_ot  <- 1 - exp(-r.nmb_ot * cycle_length)       # from CNMB to come off tr
 pr.mb_ot   <- 1 - exp(-r.mb_ot * cycle_length)        # from MB to come off treatment  
 
 ##Costs (per 6 months (year/2))
-c.ne      <- 165  / 12              #Cost for staying healthy in Warfarin arm
-c.vr      <- 267  / 12              #Cost for VTE recurrence in Warfarin arm ($102)  
-c.mb      <- 435  / 12              #Cost for major bleed in Warfarin arm ($270)
-c.nmb     <- 332  / 12              #Cost for CRNMB in Warfarin arm ($167)
-c.ot      <- 0    / 12              #Cost of off treatment
+c.ne      <- 165  / 12              #Cost for staying healthy in Warfarin arm ($165 annually)
+c.vr      <- 267  / 12              #Cost for VTE recurrence in Warfarin arm ($267 annually)  
+c.mb      <- 435  / 12              #Cost for major bleed in Warfarin arm ($435 annually)
+c.nmb     <- 332  / 12              #Cost for CRNMB in Warfarin arm ($332 annually)
+c.ot      <- 0    / 12              #Cost of off treatment ($0 annually)
 
 ##Utility Values 
 u.ne    <- 0.825               #Utility of No Event
