--- a/03_CEA_1yr_ICER.Rmd
+++ b/03_CEA_1yr_ICER.Rmd
@@ -97,12 +97,22 @@ summary.psa(psa, calc_sds=TRUE)
 Distribution of ICER estimates
 
 ```{r}
-
 plot.psa(psa) +
   ggthemes::scale_color_colorblind() +
   ggthemes::scale_fill_colorblind() +
   xlab("Effectiveness (QALYs)") +
   guides(col = guide_legend(nrow = 2)) +
   theme(legend.position = "right")
+```
 
+Worst CERs (highest cost / lowest effectiveness)
+
+```{r}
+data.frame(
+  Strategy = c("Warfarin", "Rivaroxaban"),
+  max_cost = c(max(psa$cost$Warfarin), max(psa$cost$Rivaroxaban)),
+  min_effectiveness = c(min(psa$effectiveness$Warfarin), min(psa$effectiveness$Rivaroxaban)),
+  worst_CER = c(max(psa$cost$Warfarin)/min(psa$effectiveness$Warfarin),
+                max(psa$cost$Rivaroxaban)/min(psa$effectiveness$Rivaroxaban))
+)
 ```
